--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -8,7 +8,7 @@
                 Filter by:
             </div>
             <div class="col-md-4">
-                <input type="text" />
+                <input type="text">
             </div>
         </div>
         <div class="row">
