--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -21,7 +21,9 @@
                 <thead>
                     <tr>
                         <th>
-                            <button class="btn btn-primary">
+                            <button 
+                                class="btn btn-primary"
+                                (click)="toggleImage()">
                                 Show Image
                             </button>
                         </th>
@@ -36,6 +38,7 @@
                     <tr *ngFor="let product of products">
                         <td>
                             <img 
+                                *ngIf="showImage"
                                 [src]="product.imageUrl" 
                                 [title]="product.productName"
                                 [style.width.px]="imageWidth"
